fix alignment issues (#882)
* sc-14206 align address tool bar buttons

* sc-13965 sc-14211 send new link font and alignment

* sc-14220 left align get repairs link

* remove unnecessary styling

--- a/client/src/styles/AccountSettingsPage.scss
+++ b/client/src/styles/AccountSettingsPage.scss
@@ -73,9 +73,6 @@
       display: flex;
       flex-direction: column;
       gap: 0.625;
-      .send-new-link {
-        justify-content: start;
-      }
     }
   }
 
