--- a/client/src/styles/GetRepairs.scss
+++ b/client/src/styles/GetRepairs.scss
@@ -5,6 +5,6 @@
   margin-top: 1.25rem;
 
   .jfcl-link {
-    justify-content: center;
+    text-align: left;
   }
 }
